--- a/hugo.yaml
+++ b/hugo.yaml
@@ -84,7 +84,7 @@ params:
 
   comments:
     enabled: true
-    provider: disqus
+    provider: waline
 
     disqusjs:
       shortname:
@@ -117,20 +117,22 @@ params:
       clientSecret:
       autoCreateIssue: false
 
-    # Waline client configuration see: https://waline.js.org/en/reference/component.html
+    # Waline client configuration see: https://waline.js.org/en/reference/client/props.html
     waline:
-      serverURL:
-      lang:
-      pageview:
+      serverURL: https://commentsystem.chenalna.site
+      lang: zh-CN
+      visitor: false
+      avatar:
       emoji:
-        - https://unpkg.com/@waline/emojis@1.0.1/weibo
+        - https://cdn.jsdelivr.net/gh/walinejs/emojis/weibo
+        - https://npm.elemecdn.com/@waline/emojis@1.1.0/bilibili
       requiredMeta:
-        - name
-        - email
-        - url
+        - nick
+        - mail
+        - link
       locale:
         admin: Admin
-        placeholder:
+        placeholder: 请留言
 
     twikoo:
       envId:
